--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ version = "0.2.1"
 readme = "README.md"
 
 [dependencies]
-cortex-m = "0.6.0"
+riscv = "0.6.0"
+bl602-hal = { git="https://github.com/9names/bl602-hal.git", branch="serial_fifo_fmt" }
+
 
 [features]
 default = []
